@@ -1,5 +1,7 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: rework :strsub find-and-replace to use mire patterns.
+    - jbj: mire: add REG_NEWLINE to default regex compilation.
     - jbj: add :strsub format extension find-and-replace using posix RE's.
     - jbj: fix: reattach RPMMIRE_DEFAULT as posix regex, not strcmp, pattern.
     - jbj: lzdio: start using -llzma instead.
